trying to fix images not showing

--- a/spotthedifferenceproject/spotthedifference.css
+++ b/spotthedifferenceproject/spotthedifference.css
@@ -49,7 +49,6 @@ body, html {
     border-radius: 10px;
     text-align: center;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-    cursor: pointer;
 }
 
 .level h3 {
